<resources>
    <string name="app_name">Officially</string>
    <string name="app_id">mBgaFjYuGcSRZpv64YmFb73bCc0iijRTJhbq6P0c</string>
    <string name="client_key">MzXOhtTZuyMiM9S0ZNXXbMM9m8AgBJld1xbbbQhD</string>

    <!-- PubNub keys -->
    <string name="pubnub_publish_key">pub-c-2ce4f481-85ca-4ffd-9b61-89e4c8ad969e</string>
    <string name="pubnub_subscribe_key">sub-c-78f1fa4e-4782-11e5-afb6-02ee2ddab7fe</string>
    <string name="pubnub_secret_key">sec-c-YTRkYWNmMTMtNGMzYi00MzIxLTgxMDktOWJkZjNmZTQ0ZDg1</string>

    <string name="introduction_txt">Some introduction \ntext here</string>

    <string name="take_photo">Take Photo</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="please_complete_the_sign_up">Please complete the sign up form</string>
    <string name="add_profile_img">Add</string>
    <string name="edit_profile">Edit</string>

    <string name="motto">What\'s the phrase you live by?</string>
    <string name="name_lbl">Name</string>
    <string name="gender_lbl">I define myself as...</string>
    <string name="age_lbl">Age</string>
    <string name="location_lbl">Now I\'m in...</string>
    <string name="interested_in_lbl">I\'m interested in...</string>
    <string name="looking_for_lbl">and I\'m looking for...</string>
    <string name="about_me_lbl">Introduction</string>
    <string name="perfect_smn_lbl">The Perfect Someone</string>
    <string name="perfect_date_lbl">The Perfect Date</string>
    <string name="relationship_lbl">Relationship Status</string>
    <string name="children_lbl">Children</string>
    <string name="education_lbl">Education</string>
    <string name="body_type_lbl">I describe my body as...</string>
    <string name="height_lbl">My height is...</string>
    <string name="ethnicity_lbl">Ethnicity</string>
    <string name="interests_lbl">Hobbies</string>
    <string name="drinking_lbl">Drinking</string>
    <string name="smoking_lbl">Smoking</string>
    <string name="religion_lbl">Religion</string>
    <string name="choice_txt">Click to choose...</string>
    <string name="change_txt">Click to change...</string>
    <string name="none_txt">- - -</string>
    <string name="multi_txt">Click to start writing...</string>
    <string name="no_photos">No photos</string>
    <string name="introduction_none_txt">Fill your introduction and improve your matches.</string>
    <string name="perfectSmn_none_txt">Describe your perfect someone and improve your matches.</string>
    <string name="perfectDate_none_txt">Describe your perfect date and improve your matches.</string>
    <string name="done">Done</string>
    <string name="user_info_save">Save</string>

    <!-- Main Info Questions -->
    <string name="main_username_lbl">UserName</string>
    <string name="main_details_lbl">Details</string>
    <string name="main_birthday_lbl">Birthday</string>
    <string name="main_location_lbl">Location</string>
    <string name="cancel_user_creation">Cancel user creation</string>
    <string name="cancel_user_alert_msg">You\'re going to loose all information till now. Do you really want it?</string>
    


    <string name="menu_delete">Delete</string>
    <string name="menu_set_as">Set As Profile</string>
    <string name="menu_edit_profile">Edit Profile</string>
    <string name="menu_view_gallery">View Gallery</string>
    <string name="menu_add_pic">Add Picture</string>
    <string name="menu_record_video">Record Video</string>
    <string name="menu_profile_remote">Open Prof Remote</string>

    <string name="video_warning" >This video is not available in the moment.</string>
    <string name="none_account">Don\'t have an account?</string>

    <string-array name="gender_values">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string name="interested_in_title">Interested In</string>
    <string-array name="interested_in_values">
        <item>Men</item>
        <item>Women</item>
        <item>Men and Women</item>
    </string-array>
    <string name="looking_for_title">Looking For</string>
    <string-array name="looking_for_values">
        <item>Friends</item>
        <item>Flirting</item>
        <item>Fun</item>
        <item>Dating</item>
        <item>Chat</item>
        <item>Party</item>
        <item>Relationship</item>
    </string-array>
    <string-array name="relationship_values">
        <item>None</item>
        <item>In a Relationship</item>
        <item>Married</item>
        <item>It\'s Complicated</item>
        <item>In an Open Relationship</item>
        <item>Separated</item>
        <item>Divorced</item>
        <item>In a Civil Union</item>
    </string-array>
    <string-array name="body_type_values">
        <item>None</item>
        <item>Slim</item>
        <item>Petite</item>
        <item>Slender</item>
        <item>Normal</item>
        <item>More toLove</item>
        <item>Curvy</item>
        <item>Swimmers Build</item>
        <item>Muscular</item>
        <item>Skinny</item>
        <item>Tall</item>
    </string-array>
    <string-array name="ethnicity_values">
        <item>None</item>
        <item>Latina/Latino</item>
        <item>Black/African</item>
        <item>Native/Aboriginal</item>
        <item>Asian</item>
        <item>East Islander</item>
        <item>White/Caucasian</item>
        <item>Middle Eastern</item>
        <item>Mixed/Multi</item>
    </string-array>
    <string-array name="interests_values">
        <item>None</item>
        <item>Movies</item>
        <item>Books</item>
        <item>TV</item>
        <item>Music</item>
        <item>Family</item>
        <item>Pets</item>
        <item>Drinking</item>
        <item>Restaurants</item>
        <item>Shopping</item>
        <item>Watching Sports</item>
        <item>Playing Sports</item>
        <item>Bars</item>
        <item>Dancing</item>
        <item>Games</item>
    </string-array>
    <string-array name="children_values">
        <item>None</item>
        <item>No</item>
        <item>Yes, at home with me</item>
        <item>Yes, but not living with me</item>
    </string-array>
    <string-array name="education_values">
        <item>None</item>
        <item>No degree</item>
        <item>High school graduate</item>
        <item>Attended college</item>
        <item>College graduate</item>
        <item>Advanced degree</item>
    </string-array>

    <!-- Zodiac Signs -->
    <string-array name="zodiac_start_dates">
        <item>20/01</item>
        <item>19/02</item>
        <item>21/03</item>
        <item>20/04</item>
        <item>21/05</item>
        <item>21/06</item>
        <item>23/07</item>
        <item>23/08</item>
        <item>23/09</item>
        <item>23/10</item>
        <item>22/11</item>
        <item>22/12</item>
    </string-array>
    <string-array name="zodiac_end_dates">
        <item>18/02</item>
        <item>20/03</item>
        <item>19/04</item>
        <item>20/05</item>
        <item>20/06</item>
        <item>22/07</item>
        <item>22/08</item>
        <item>22/09</item>
        <item>22/10</item>
        <item>21/11</item>
        <item>21/12</item>
        <item>19/1</item>
    </string-array>



    <!-- Notifications -->
    <string name="video_upload_notif_title">Video upload finished</string>
    <string name="video_upload_notif_text">Touch to see it. It\'s in your Gallery.</string>
    <string name="video_upload_notif_text_warning">Video upload failed</string>
    <string name="picture_upload_notif_title">Picture Upload</string>
    <string name="picture_upload_notif_text">Upload in progress</string>
    <string name="picture_upload_notif_complete">Upload complete</string>
    <string name="picture_upload_notif_text_warning">Picture upload failed</string>

    <!-- Alert Dialog -->
    <string name="alert_title">Wrong Date</string>
    <string name="alert_text">The year you picked is bigger or equal to current!</string>

</resources>
