<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/motto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/items"
        android:textStyle="italic"
        android:layout_margin="15dp"
        android:text="What's the phrase you live by?"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="35dp"
        android:src="@drawable/divider"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height"
        android:gravity="bottom">
        <TextView
            android:id="@+id/name_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/label_padding_left"
            android:text="@string/name_lbl"
            />
        <EditText
            android:id="@+id/name_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/name_lbl"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/gender_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/gender_lbl"
            android:paddingLeft="@dimen/label_padding_left"/>
        <Spinner
            android:id="@+id/gender_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/gender_lbl"
            android:entries="@array/gender_values"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/age_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:layout_marginTop="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:text="@string/age_lbl" />
        <EditText
            android:id="@+id/age_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/age_lbl"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/location_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:text="@string/location_lbl" />
        <EditText
            android:id="@+id/location_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/location_lbl"
            android:editable="false"
            android:textColor="@color/dark_gray"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/interested_in_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:gravity="center_vertical"
            android:text="@string/interested_in_lbl" />
        <TextView
            android:id="@+id/interested_in_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/interested_in_lbl"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:text="@string/choice_txt"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/looking_for_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:gravity="center_vertical"
            android:text="@string/looking_for_lbl" />
        <TextView
            android:id="@+id/looking_for_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/looking_for_lbl"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:text="@string/choice_txt"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/about_me_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:gravity="center_vertical"
            android:text="@string/about_me_lbl" />
        <TextView
            android:id="@+id/about_me_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/aboutMe_height"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:layout_toRightOf="@+id/about_me_lbl"
            android:text="@string/multy_txt"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height"
        android:orientation="horizontal"
        android:background="@color/gray"></LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/relationship_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/relationship_lbl"
            android:paddingLeft="@dimen/label_padding_left"
            android:gravity="center_vertical" />
        <TextView
            android:id="@+id/relationship_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/relationship_lbl"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:text="@string/choice_txt"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/body_type_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/body_type_lbl"
            android:paddingLeft="@dimen/label_padding_left"
            android:gravity="center_vertical" />
        <TextView
            android:id="@+id/body_type_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/body_type_lbl"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:text="@string/choice_txt"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/ethnicity_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ethnicity_lbl"
            android:paddingLeft="@dimen/label_padding_left"
            android:gravity="center_vertical" />
        <TextView
            android:id="@+id/ethnicity_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/ethnicity_lbl"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:text="@string/choice_txt"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/interests_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/interests_lbl"
            android:paddingLeft="@dimen/label_padding_left"
            android:gravity="center_vertical" />
        <TextView
            android:id="@+id/interests_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/interests_lbl"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding_left"
            android:text="@string/choice_txt"/>
    </RelativeLayout>
</LinearLayout>