<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <!-- Divider -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_info_height"
        android:layout_marginBottom="@dimen/divider_info_margin"
        android:layout_marginLeft="@dimen/divider_info_margin"
        android:layout_marginRight="@dimen/divider_info_margin"
        android:layout_marginTop="5dp"
        android:src="@drawable/divider"/>

    <TextView
        android:id="@+id/motto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/items"
        android:textStyle="italic"
        android:layout_margin="@dimen/motto_margin"
        android:text="@string/motto"/>

    <!-- Divider -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_info_height"
        android:layout_margin="@dimen/divider_info_margin"
        android:src="@drawable/divider"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_alignParentLeft="true">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/location"/>
        <TextView
            android:id="@+id/location_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:text="location..."/>
    </LinearLayout>

    <!--<RelativeLayout-->
    <!--android:layout_height="35dp"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_gravity="bottom"-->
    <!--android:layout_marginBottom="16dp"-->
    <!-->-->
    <!--<ImageView-->
    <!--android:id="@+id/drinking_icon"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/icons_margin"-->
    <!--android:layout_marginBottom="@dimen/icons_margin"-->
    <!--android:layout_marginRight="80dp"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:src="@drawable/drinking_g"/>-->
    <!--<ImageView-->
    <!--android:id="@+id/smoking_icon"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/icons_margin"-->
    <!--android:layout_marginBottom="@dimen/icons_margin"-->
    <!--android:layout_marginRight="40dp"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:src="@drawable/smoking_g"/>-->
    <!--<ImageView-->
    <!--android:id="@+id/religion_icon"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginTop="@dimen/icons_margin"-->
    <!--android:layout_marginBottom="@dimen/icons_margin"-->
    <!--android:layout_alignParentRight="true"-->
    <!--android:src="@drawable/religion_g"/>-->
    <!--</RelativeLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/interested_in_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding"
            android:textColor="@color/action_bar"
            android:text="@string/interested_in_lbl" />
        <TextView
            android:id="@+id/interested_in_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/interested_in_lbl"
            android:paddingRight="@dimen/label_padding"
            android:gravity="right"
            android:textColor="@color/items"
            android:text="@string/choice_txt"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/looking_for_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding"
            android:textColor="@color/action_bar"
            android:text="@string/looking_for_lbl" />
        <TextView
            android:id="@+id/looking_for_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/looking_for_lbl"
            android:paddingRight="@dimen/label_padding"
            android:gravity="right"
            android:textColor="@color/items"
            android:text="@string/choice_txt"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/about_me_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingLeft="@dimen/label_padding"
            android:textColor="@color/action_bar"
            android:text="@string/about_me_lbl" />
        <TextView
            android:id="@+id/about_me_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingRight="@dimen/label_padding"
            android:gravity="right"
            android:layout_toRightOf="@+id/about_me_lbl"
            android:textColor="@color/items"
            android:text="@string/multy_txt"/>
    </RelativeLayout>

    <!-- Divider -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_info_height"
        android:layout_margin="@dimen/divider_info_margin"
        android:src="@drawable/divider"/>

    <!-- Relationship Status -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/relationship_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/relationship_lbl"
            android:paddingLeft="@dimen/label_padding"
            android:textColor="@color/action_bar" />
        <TextView
            android:id="@+id/relationship_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/relationship_lbl"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingRight="@dimen/label_padding"
            android:gravity="right"
            android:textColor="@color/items"
            android:text="@string/choice_txt"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/body_type_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/body_type_lbl"
            android:paddingLeft="@dimen/label_padding"
            android:textColor="@color/action_bar" />
        <TextView
            android:id="@+id/body_type_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/body_type_lbl"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingRight="@dimen/label_padding"
            android:gravity="right"
            android:textColor="@color/items"
            android:text="@string/choice_txt"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/ethnicity_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ethnicity_lbl"
            android:paddingLeft="@dimen/label_padding"
            android:textColor="@color/action_bar" />
        <TextView
            android:id="@+id/ethnicity_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/ethnicity_lbl"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingRight="@dimen/label_padding"
            android:gravity="right"
            android:textColor="@color/items"
            android:text="@string/choice_txt"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/label_height">
        <TextView
            android:id="@+id/interests_lbl"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/interests_lbl"
            android:paddingLeft="@dimen/label_padding"
            android:textColor="@color/action_bar" />
        <TextView
            android:id="@+id/interests_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/interests_lbl"
            android:layout_marginBottom="@dimen/label_margin_bottom"
            android:paddingRight="@dimen/label_padding"
            android:gravity="right"
            android:textColor="@color/items"
            android:text="@string/choice_txt"/>
    </RelativeLayout>
</LinearLayout>